Fix HTML structure and update paths

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="cabContainer fontecorporativa"><!--Cabecalho-->
         <p>Cidade de Novo Hamburgo</p>
-        <a href="index.html"><img src="../img/NOIA logo.svg" alt="logo" height="120px"></a>
+        <a href="index.html"><img src="img/NOIA logo.svg" alt="logo" height="120px"></a>
         <div class="fontecorporativa">Novo Olimpo de Inspiração Atlética 
 
         </div>
@@ -26,7 +26,7 @@
 
             <!--Resolução do banner: 750x1980px-->
 
-            <img src="../img/banners/bannerNH-FGV-NOIA.svg" alt="bandeiraNoiaBanner" height="743px">
+            <img src="img/banners/bannerNH-FGV-NOIA.svg" alt="bandeiraNoiaBanner" height="743px">
 
         </div>
 
@@ -41,7 +41,7 @@
             <!--------------card--------------->
             <div class="UnitCard fontecorporativa">
                 <!--Imagem-->
-                <img src="../img/news/Uniformenovo.png" alt="bannerIMG" class="imgCardNews">
+                <img src="img/news/Uniformenovo.png" alt="bannerIMG" class="imgCardNews">
                 <!--Data-->
                 <p class="DateCard">06/11/2025</p>
                 <!--Descrição-->
@@ -53,7 +53,7 @@
             <!--------------card--------------->
             <div class="UnitCard fontecorporativa">
                 <!--Imagem-->
-                <img src="../img/news/OENH-Feminino-if+noia.png" alt="bannerIMG" class="imgCardNews">
+                <img src="img/news/OENH-Feminino-if+noia.png" alt="bannerIMG" class="imgCardNews">
                 <!--Data-->
                 <p class="DateCard">30/10/2025</p>
                 <!--Descrição-->
@@ -65,7 +65,7 @@
             <!--------------card--------------->
             <div class="UnitCard fontecorporativa">
                 <!--Imagem-->
-                <img src="../img/news/amistosocontravet.jpg" alt="bannerIMG" class="imgCardNews">
+                <img src="img/news/amistosocontravet.jpg" alt="bannerIMG" class="imgCardNews">
                 <!--Data-->
                 <p class="DateCard">20/09/2025</p>
                 <!--Descrição-->
@@ -84,11 +84,12 @@
             <p><i class="fa-solid fa-envelope"></i>rabelloarthur.r@gmail.com</p>
         </div>
         <div><!--logo-->
-            <img src="../img/NOIA logo.svg" alt="Logo noia" height="120px">
+            <img src="img/NOIA logo.svg" alt="Logo noia" height="120px">
         </div>
         <div><!--roalts-->
             <p class="fontecorporativa">Novo Olimpo de Inspiração Atlética ©</p>
         </div>
     </div>
 </body>
+
 </html>
