Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <!--Descrição-->
                 <P class="boxTextCard">Os uniformes oficiais da NOIA em parceiria com IFSUL estão chegando! E estarão prontas
                     após o Municipal de vôlei Masculino</P>
-                <a href="ERRO.html" target="_self" class="buttonCard">Veja no Instagram</a>
+                <a href="html/ERRO.html" target="_self" class="buttonCard">Veja no Instagram</a>
             </div>
             <!---------------------------------> 
             <!--------------card--------------->
@@ -70,7 +70,7 @@
                 <p class="DateCard">20/09/2025</p>
                 <!--Descrição-->
                 <P class="boxTextCard">Amistoso contra veteranos, cheque os melhores momentos no Youtube da NOIA!</P>
-                <a href="ERRO.html" target="_self" class="buttonCard">Assista no YouTube</a>
+                <a href="html/ERRO.html" target="_self" class="buttonCard">Assista no YouTube</a>
             </div>
             <!--------------------------------->
         </div>
@@ -93,3 +93,4 @@
 </body>
 
 </html>
+
