--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="container">
     <div class="cabContainer fontecorporativa"><!--Cabecalho-->
-        <p>Cidade de Novo Hamburgo</p>
+        <p class="fontecorporativa phonenon">Cidade de Novo Hamburgo</p>
         <a href="index.html"><img src="img/NOIA logo.svg" alt="logo" height="120px"></a>
-        <div class="fontecorporativa">Novo Olimpo de Inspiração Atlética 
+        <div class="fontecorporativa phonenon">Novo Olimpo de Inspiração Atlética 
 
         </div>
     </div>
@@ -38,6 +39,20 @@
         </div>
 
         <div class="NewsCadContainer"><!--Cards de noticia-->
+            <!--------------card--------------->
+            <div class="UnitCard fontecorporativa">
+                <!--Imagem-->
+                <img src="img/municipalde10-11.jpeg" alt="bannerIMG" class="imgCardNews">
+                <!--Data-->
+                <p class="DateCard">10/11/2025</p>
+                <!--Descrição-->
+                <P class="boxTextCard">
+                    O time NOIA joga contra IENH Madre e outros times no Municipal de Novo Hamburgo 2025 vencendo um de três jogos sendo esse o 
+                    ultimo jogo do tecnico Arthur Rosa e o ponteiro titular Pedro (14)
+                </P>
+                <a href="https://www.youtube.com/@NOIANH-BR" target="_self" class="buttonCard">Veja no Youtube</a>
+            </div>
+            <!---------------------------------> 
             <!--------------card--------------->
             <div class="UnitCard fontecorporativa">
                 <!--Imagem-->
@@ -78,7 +93,7 @@
     <div class="rodapeContainer"><!--Rodapé-->
         <div class="contatoRodapeContainer fontecorporativa"><!--contato-->
             <a href=""><i class="fa-brands fa-instagram"></i> Instagram</a>
-            <a href=""><i class="fa-brands fa-youtube"></i> Youtube</a>
+            <a href="https://www.youtube.com/@NOIANH-BR"><i class="fa-brands fa-youtube"></i> Youtube</a>
             <a href=""><i class="fa-brands fa-x-twitter"></i>Twitter/X</a>
             <a href=""><i class="fa-brands fa-tiktok"></i> TikTok</a>
             <p><i class="fa-solid fa-envelope"></i>rabelloarthur.r@gmail.com</p>
@@ -87,10 +102,9 @@
             <img src="img/NOIA logo.svg" alt="Logo noia" height="120px">
         </div>
         <div><!--roalts-->
-            <p class="fontecorporativa">Novo Olimpo de Inspiração Atlética ©</p>
+            <p class="fontecorporativa phonenon">Novo Olimpo de Inspiração Atlética ©</p>
         </div>
     </div>
+    </div>
 </body>
-
 </html>
-
