--- a/html/ERRO.html
+++ b/html/ERRO.html
@@ -19,6 +19,7 @@
             background-color: rgb(17, 17, 17);
             border-radius: 20px;
             color: white;
+            padding: 20px;
         }
         .texto{
             display: flex;
@@ -41,6 +42,15 @@
             color: white;
             padding: 5px;
             background-color: black;
+            transition: 1s;
+            border-radius: 10px;
+        }
+        a:hover{
+            text-decoration: none;
+            color: rgb(0, 0, 0);
+            padding: 5px;
+            background-color: rgb(255, 255, 255);
+            transition: 1s;
         }
     </style>
 </head>
@@ -52,6 +62,7 @@
         <div class="texto">
             <h1>Tivemos Problemas com o LINK</h1>
             <a href="../index.html">Retornar a pagina incial</a>
+            <br>
         </div>
     </div>
     
